fixed alignment of header on small screens

--- a/src/main/resources/public/style/css/angular-material-fixes.css
+++ b/src/main/resources/public/style/css/angular-material-fixes.css
@@ -5,3 +5,13 @@
 .gray-on-hover>a.md-button.md-default-theme:not([disabled]):hover, a.md-button:not([disabled]):hover, .md-button.md-default-theme:not([disabled]):hover, .md-button:not([disabled]):hover{
     background-color: transparent;
 }
+
+md-list-item {
+    margin-left: -8px;
+}
+
+@media (min-width: 960px) {
+    md-list-item {
+        margin-left: 0;
+    }
+}
